@@ -1,3 +1,8 @@
+2006-05-19  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/gp_cairo.c (gp_cairo_draw_enhanced_text):
+	Remove unappropriate comments about enhanced_max_height.
+
 2006-05-18  Timothee Lecomte  <timothee.lecomte@ens.fr>
 
 	* src/Makefile.am (AUTOMAKE_OPTIONS): Remove 'subdir-objects',
